# Notorious-FFT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: README.md  bench.c  bench_cpp.cpp  bench_mixed_sizes.c  bench_openmp.c  comprehensive_bench.cpp  plot_results.py
examples/: basic.c  cpp_advanced.cpp
include/: notorious_fft.h  notorious_fft.hpp
src/: 01_core.h  02_math.h  03_simd.h  04_kernels.h  05_algorithms.h  06_plan.h  07_legacy.h  amalgamate.py
tests/: test_notoriousfft.c  test_notoriousfft.cpp
